--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ theme:
     - navigation.instant
     - navigation.tabs
     - navigation.path
-    # - navigation.top
+    - navigation.top
     # - toc.follow
     - navigation.footer
   palette: 
@@ -37,9 +37,8 @@ nav:
       - Ling_Han.md
     - Fei Se:
       - Fei_Se.md
-    - Fei Se alt:
-      - Fei_Se_alt.md
   - Eventos: Eventos.md
+  - Guías: Guías.md
   - Versiones: Versiones.md
 
 markdown_extensions:
