--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,10 +32,10 @@ theme:
 
 nav:
   - Inicio: index.md
-  - Simulacrums: Simulacrums.md
-  - Eventos: Eventos.md
-  - Guías: Guías.md
-  - Versiones: Versiones.md
+  - Simulacrums: simulacrums.md
+  - Eventos: eventos.md
+  - Guías: guías.md
+  - Versiones: versiones.md
 
 markdown_extensions:
   - attr_list
